feature/changing_routes

--- a/source/inpainting/inpainting_CVAE_GAN.ipynb
+++ b/source/inpainting/inpainting_CVAE_GAN.ipynb
@@ -139,9 +139,9 @@
       ],
       "source": [
         "# Let's load the data (Based on a cut)\n",
-        "images_route_24_30 = f'./../data/size_480/24_30/'\n",
-        "images_route_22_30 = f'./../data/size_480/22_30/'\n",
-        "images_route_20_2  = f'./../data/size_480/20_2/'\n",
+        "images_route_24_30 = f'./../../data/size_480/24_30/'\n",
+        "images_route_22_30 = f'./../../data/size_480/22_30/'\n",
+        "images_route_20_2  = f'./../../data/size_480/20_2/'\n",
         "#images_route_24_30 = f'./drive/MyDrive/data/size_480/24_30/'\n",
         "#images_route_22_30 = f'./drive/MyDrive/data/size_480/22_30/'\n",
         "#images_route_20_2  = f'./drive/MyDrive/data/size_480/20_2/'\n",
