feature/organizing_files_final_commit

--- a/source/inpainting/inpainting_CVAE.ipynb
+++ b/source/inpainting/inpainting_CVAE.ipynb
@@ -960,6 +960,15 @@
         "# Finally, we calculate the metrics for the test set\n",
         "calculate_similarity_metrics(model, test_sample)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# End of notebook!"
+      ]
     }
   ],
   "metadata": {
